Mucked around with arduino deps. Still gross.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Adafruit_NeoPixel"]
 	path = Adafruit_NeoPixel
 	url = https://github.com/adafruit/Adafruit_NeoPixel
+[submodule "arduino-cmake"]
+	path = arduino-cmake
+	url = git://github.com/queezythegreat/arduino-cmake.git
